--- a/From.html/array.html
+++ b/From.html/array.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+    <p id="fact"></p>
+    <!-- <button id="btn">getdata</button> -->
     <script>
         // let num = [3, 4, 7, 2, 8]
 
@@ -63,7 +66,7 @@
         // const users = [
         //     { name: "Sourav", age: 23, stats: "Depressed" },
         //     { name: "Pallvi", age: 24, stats: "Happy" },
-        //     { name: "Rajiv", age: 26, stats: "littele-Happy" },
+        //     { name: "Rajiv", age: 26, stats: "littel-Happy" },
         //     { name: "Ritik", age: 27, stats: "Exteremly_happy" },
         // ];
 
@@ -84,19 +87,117 @@
         // let val = hello(3, 4)
         // console.log(val)
 
-        let count = 0;
+        // let count = 0;
 
-        const countVovel = (str) => {
+        // const countVovel = (str) => {
 
-            for (const char of str) {
-                if (char === "a" || char === "e" || char === "i" || char === "o" || char === "u") {
-                    count++;
-                }
-            }
-            console.log(count)
+        //     for (const char of str) {
+        //         if (char === "a" || char === "e" || char === "i" || char === "o" || char === "u") {
+        //             count++;
+        //         }
+        //     }
+        //     console.log(count)
+        // }
+
+        // countVovel("apnacollege");
+
+        // const arr = [298,34,1,56];
+
+        // const newArr = arr.sort((a,b)=> a-b);
+        // document.write(newArr);
+
+        // const arr = 
+
+        // const new1 = new Set([2, 2, 43, 1, 4, 56]);
+        // console.warn(new1);
+        // const new2 = { name: 'sourav' }
+        // console.warn(delete new2.name);
+
+        // const arr = ['Banana', 'Apple', 'Guava', 'Date']
+        // console.warn(arr.sort());
+
+        // const arr = ['peter', 'sam', 'bear']
+        // const [,x] = arr
+        // console.warn(x);
+
+        // let data =
+        // {
+        //     name: 'sourav',
+        //     age: 29
+        // }
+
+        // let data2 =
+        // {
+        //     class: 'Economy',
+        //     age: 129
+        // }
+        // data = { ...data, ...data2 }
+
+        // console.warn(data);
+        // document.write(data);
+
+        // console.warn("💖" === "💔");
+
+        // console.log(Promise.resolve(5));
+
+        // const a = 'sam'
+
+        // const getApi = () => {
+        //     console.warn(a);
+        // }
+        // getApi();
+
+        // console.log(`${`i love`} javascript`)
+
+        // const name = `code step by step`
+
+        // console.warn(typeof name === 'object');
+        // console.warn(typeof name === 'string');
+
+        // const URL = "https://cat-fact.herokuapp.com/facts";
+
+        // const factPara = document.querySelector('#fact').innerHTML
+
+
+        // const fetchApi = async () => {
+        //     let response = await fetch(URL);
+        //     console.log(response);
+        //     let data = await response.json();
+        //     factPara.innerText = data[1].text;
+        // }
+        // console.log(fetchApi());
+
+        // const btn2 = document.querySelector('#btn').addEventListener("click", fetchApi)
+
+        // const obj = {name:'sourav'}
+        // Object.seal(obj);
+
+        // obj.name = 89;
+        // console.log(obj);
+
+        // let data = [2, 3, 4, 1, 5, 2]
+        // delete data[2]
+        // console.log(data);
+
+        // let a = 3 ** 3
+        // console.warn(a);
+
+        // let a = 1
+        // let b = 2
+        // console.warn(--b === a);
+
+        for (var i = 0; i < 3; i++) {
+            setTimeout(() => {
+                console.warn(i);
+            })
         }
 
-        countVovel("apnacollege");
+
+
+
+
+
+
 
     </script>
 </body>
