--- a/From.html/array.html
+++ b/From.html/array.html
@@ -7,17 +7,19 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: gray;">
 
-    <p id="fact"></p>
-    <!-- <button id="btn">getdata</button> -->
+    <!-- <p id="fact"></p>
+    <button id="btn">getdata</button> -->
     <script>
-        // let num = [3, 4, 7, 2, 8]
+        // let num = [3, 1, 3, 7, 8, 9]
 
-        // let num2 =   num.map((a,b,arr)=>{
-        //    return a+b 
+        // let num2 = num.map((a, b, arr) => {
+        //     return a+b
         // })
-        // document.write(num2)
+
+        // document.write(num + "<br>")
+        // document.write(num2 + "<br>")
 
         // let num3 = num.filter((v) => {
         //     return v >= 4
@@ -25,40 +27,43 @@
         // document.write(num3)
 
 
-        //  spread in array
+        // //  spread in array
         // let name = ["Sourav", "Vishal", "Shoib", "Tanuj", "Akash", "Varun"]
 
         // function getNames(num, num1, num2, num3, num4, num5) {
-        //     console.log(num, num1, num2)
+        //     console.log(num, num1, num2, num3, num4, num5)
         // }
-
         // getNames(...name)
 
         // //  spread in object
 
         // let student = {
-        //     ...name,
-
+        //     name1: 'Sourav',
+        //     age1: 29,
+        //     stats1: 'Hopeless'
         // }
 
         // function getAbout(name, age, Stats) {
         //     console.log(name, age, Stats)
         // }
 
-        // getAbout(...student)
+        // getAbout({...student})
 
         // const users = [
         //     { name: "Sourav", age: 23, stats: "Depressed" },
         //     { name: "Pallvi", age: 24, stats: "Happy" },
+        //     { name: 'raavi', age: 19, stats: "extermely happy" },
         //     { name: "Rajiv", age: 26, stats: "littele-Happy" },
         //     { name: "Ritik", age: 27, stats: "Exteremly_happy" },
         // ]
 
         // const output = users.reduce((acc, curr) => {
-        //     if (curr.age < 25 && !acc) {
-        //         return curr.name;
+        //     for (i = 0; i <= users.length; i++) {
+        //         if (curr.age < 25 && !acc) {
+        //             return curr.name;
+        //         }
+        //         return acc;
         //     }
-        //     return acc;
         // }, null)
 
         // console.log(output)
@@ -71,7 +76,7 @@
         // ];
 
         // const result = users.reduce((acc, user) => {
-        //     if (user.age < 25 && !acc) {
+        //     if (user.age < 25) {
         //         return user.name;
         //     }
         //     return acc;
@@ -106,7 +111,7 @@
         // const newArr = arr.sort((a,b)=> a-b);
         // document.write(newArr);
 
-        // const arr = 
+        // const arr =
 
         // const new1 = new Set([2, 2, 43, 1, 4, 56]);
         // console.warn(new1);
@@ -158,8 +163,8 @@
 
         // const factPara = document.querySelector('#fact').innerHTML
 
-
-        // const fetchApi = async () => {
+        // const fetchApi = async () =>
+        // {
         //     let response = await fetch(URL);
         //     console.log(response);
         //     let data = await response.json();
@@ -169,10 +174,10 @@
 
         // const btn2 = document.querySelector('#btn').addEventListener("click", fetchApi)
 
-        // const obj = {name:'sourav'}
+        // const obj = { name: 'sourav' }
+        // obj.name = 89;
         // Object.seal(obj);
 
-        // obj.name = 89;
         // console.log(obj);
 
         // let data = [2, 3, 4, 1, 5, 2]
@@ -186,18 +191,353 @@
         // let b = 2
         // console.warn(--b === a);
 
-        for (var i = 0; i < 3; i++) {
-            setTimeout(() => {
-                console.warn(i);
-            })
-        }
+        // for (var i = 0; i < 114; i++) {
+        //     document.write(`${i} <br>`)
+        // }
+
+        // let sum = eval(`10*8+9*6`);
+        // console.log(sum);
+
+        // for (let i = 0; i < 5; i++)
+        // {
+        //     if (i === 2) continue;
+        //     console.log(i);
+        // }
+
+        // var createCounter = function (n) {
+        //     var count = n;
+        //     return function () {
+        //         console.log(count)
+        //         return count++
+        //     };
+        // };
+
+        // const counter = createCounter(10)
+        // counter()
+        // counter()
+        // counter()
 
 
 
+        // var expect = function (val)
+        // {
+        //     return {
+        //         toBe: function (expected)
+        //         {
+        //             if (val === expected) {
+        //                 console.log(true);
+        //             } else {
+        //                 throw new Error("Not Equal");
+        //             }
+        //         },
+        //         notToBe: function (expected) {
+        //             if (val !== expected) {
+        //                 console.log(true);
+        //             } else {
+        //                 throw new Error("Equal");
+        //             }
+        //         }
+        //     };
+        // };
+
+        // console.log(expect(5).toBe(5));
+        // console.log(expect(5).notToBe(5));
 
 
+        // Example usage:
+        // try {
+        //     expect(5).toBe(5);       // Should print true
+        //     expect(5).notToBe(10);   // Should print true
+        //     expect("hello").toBe("world");  // Should throw an error "Not Equal"
+        //     expect("open").notToBe("open");  // Should throw an error "Equal"
+        // } catch (error) {
+        //     console.error(error.message);
+        // }
+
+        // setTimeout(() => {
+        //     console.log("hello its first attempt");
+        // });
+        // setTimeout(() => {
+        //     try {
+        //         console.log(sourav);
+        //     } catch (error) {
+        //         throw new Error("koi galti hai, koi ni thik ho jaygi");
+        //     }
+        // })
+        // setTimeout(() => {
+        //     console.log("try k baad wala code");
+        // })
+
+        // var a = 2
+        // const err = () =>
+        // {
+        //     if (a == 1)
+        //     {
+        //         console.log("complete");
+        //     } else
+        //     {
+        //         throw new Error('some error')
+        //     }
+        // }
+        // err()
+
+        // console.log('after the function');
 
 
+        // try {
+        //     // some code that might cause an issue
+        //     throw new Error("This is a custom error message");
+        // } catch (error) {
+        //     console.error(error.message);
+        //     // Handle the error or take appropriate action
+        // }
+
+
+        // var createCounter = function (init) {
+        //     var a = init
+        //     return {
+        //         increment: function (a) {
+        //             return a++
+        //         },
+        //         reset: function (a) {
+        //             return a
+        //         },
+        //         decrement: function (a) {
+        //             return a--
+        //         }
+        //     }
+        // };
+
+
+        // let counter = createCounter(5);
+
+        // console.log(counter.decrement());
+        // console.log(counter.reset());
+        // console.log(counter.increment());
+
+
+        // function counter(c,d, opeation){
+        //     return opeation(c,d)
+        // }
+
+        // function add (a,b){
+        //     return a+b
+        // }
+
+        // console.log(counter(5,3,add))
+
+        // let str = 'JavaScript lo like karta hai'
+        // // let str2 = str.slice(3,6)
+
+        // let str4 = str.toLocaleUpperCase()
+        // console.log(str4);
+
+
+        // let a = [2,4,3,1,5,6]
+
+        // a.splice(1,3,9,8,7)
+
+        // console.log(a);
+
+        // let arr = [1, 3, 2, 4, 2]
+        // let arr2 = [4, 2, 41, 5, 8]
+
+        // let str = "hello"
+        // let str2 = str.constructor()
+        // console.log(str2);
+
+        // let arr = [2, 5, 4, 3, 5, 1,1]
+
+        // let arr2 = arr.sort((a, b) => a - b)
+
+        // console.log(arr2);
+
+        // const arr = [298, 34, 1, 56];
+
+        // const newArr = arr.sort((a, b) => a - b);
+        // console.log(newArr);
+
+
+        // destructuring ki hai object ki
+
+        // const obj = {
+        //     name: 'sourav',
+        //     age: 29
+        // }
+
+        // const obj2 = {
+        //     class: 'Econamy',
+        //     Mode: 'Air'
+        // }
+        // // const { name } = obj
+        // // console.log(name);
+        // // const { age } = obj
+        // // console.log(age);
+
+        // const obj3 = { ...obj, ...obj2 }
+
+        // console.log(obj3);
+
+
+        // let num = [3, 1, 3, 7, 8, 9];
+
+        // function bubbleSort(arr) {
+        //     let len = arr.length;
+        //     for (let i = 0; i < len - 1; i++) {
+        //         for (let j = 0; j < len - 1 - i; j++) {
+        //             if (arr[j] > arr[j + 1]) {
+        //                 // Swap elements if they are in the wrong order
+        //                 let temp = arr[j];
+        //                 arr[j] = arr[j + 1];
+        //                 arr[j + 1] = temp;
+        //             }
+        //         }
+        //     }
+        // }
+
+        // // Call the bubbleSort function to sort the array
+        // bubbleSort(num);
+
+        // // Display the sorted array
+        // console.log(num);
+
+        // function manSort(arr) {
+        //     let len = arr.length
+        //     for (let i = 0; i < len - 1; i++) {
+        //         for (let j = 0; j < len - 1 - i; j++) {
+        //             if (arr[j] > arr[j + 1]) {
+
+        //                 let temp = arr[j]
+        //                 arr[j] = arr[j + 1]
+        //                 arr[j + 1] = temp
+        //             }
+        //         }
+        //     }
+        // }
+
+        // manSort(num)
+
+        // console.log(num);
+
+        // for (let i = 0; i <= 5; i++) {
+        //     for (let j = 0; j <= i; j++) {
+        //         document.write('* ')
+        //     }
+        //     document.write('<br>')
+        // }
+
+        // Example object
+        // let person = {
+        //     name: 'John',
+        //     age: 25,
+        //     city: 'New York'
+        // };
+
+        // // Loop through object properties using for/in loop
+        // for (let key in person) {
+        //     console.log(key + ': ' + person[key]);
+        // }
+
+        // Example array
+        // let fruits = ['Apple', 'Banana', 'Orange'];
+
+        // // Loop through array values using for/of loop
+        // for (let fruit of fruits) {
+        //     console.log(fruit);
+        // }
+
+
+        // let numbers = [1, 2, 3, 4, 5];
+
+        // // Using reduce to sum all elements of the array
+        // let sum = numbers.reduce(function (accumulator, currentValue) {
+        //     return currentValue + accumulator  ;
+        // }, 0);
+
+        // console.log(sum); // Output: 15
+
+
+        // var myArray = [1, 2, 3, 4, 2, 3, 5, 6, 7, 8, 1];
+        // var uniqueArray = []
+
+        // for (i = 0; i < myArray.length; i++) {
+        //     var isUnique = true
+
+        //     for (j = 0; j < uniqueArray.length; j++) {
+        //         if (myArray[i] === uniqueArray[j]) {
+        //             isUnique = false
+        //             break;
+        //         }
+        //     }
+        //     if (isUnique) {
+        //         uniqueArray.push(myArray[i])
+        //     }
+        // }
+
+        // console.log(uniqueArray);
+
+        // for (var i = 1; i <= 5; i++) {
+        //     for (var j = 1; j <= 5 - i; j++) {
+        //         document.write('&nbsp;&nbsp;')
+        //     }
+        //     for (var k = 1; k <= i; k++) {
+        //         document.write('*')
+        //     }
+        //     for (var l = 2; l <= i; l++) {
+        //         document.write('*')
+        //     }
+        //     document.write('<br>')
+        // }
+
+        // const URL = "https://cat-fact.herokuapp.com/facts";
+        // const factPara = document.querySelector('#fact'); // Changed from innerHTML to just the element
+        // const btn2 = document.querySelector('#btn'); // Removed the event listener from the variable definition
+
+        // const fetchApi = async () => {
+        //     try {
+        //         let response = await fetch(URL);
+        //         if (!response.ok) {
+        //             throw new Error(`HTTP error! Status: ${response.status}`);
+        //         }
+        //         let data = await response.json();
+        //         factPara.innerText = data[1].text;
+        //     } catch (error) {
+        //         console.error("Error fetching data:", error);
+        //     }
+        // }
+
+        // // Removed the console.log from here, as fetchApi is asynchronous
+
+        // // Added the event listener to the button
+        // btn2.addEventListener("click", fetchApi);
+
+
+        // function getApi() {
+        //     return new Promise((resolve, reject) => {
+        //         setTimeout(() => {
+        //             console.log("Weather Data");
+        //             resolve(200);
+        //         }, 2000)
+        //     })
+        // }
+
+        // (async function () {
+        //     console.log('1st time call function');
+        //     await getApi()
+        //     console.log('2st time call function');
+        //     await getApi()
+        //     console.log('3st time call function');
+        //     await getApi()
+        //     console.log('4st time call function');
+        //     await getApi()
+        // })();
+        // getApi
+
+        let a = [3, 5, 2, 3, 5, 6, 4]
+        const sum = a.reduce((acc, curr) => {
+            return acc + curr
+        }, 0)
+        console.log(sum);
 
     </script>
 </body>
